INCLUDES = -I$(top_builddir) 

noinst_LTLIBRARIES    = libz.la
libz_la_SOURCES = adler32.c compress.c crc32.c deflate.c \
		  gzio.c infback.c inffast.c inflate.c \
		  inftrees.c trees.c uncompr.c zutil.c \
		  crc32.h inffast.h inflate.h trees.h zlib.h \
		  deflate.h inffixed.h inftrees.h zconf.h zutil.h

EXTRA_DIST = README


